Lang switch visibility fix for small devices

--- a/_sass/partials/_custom.scss
+++ b/_sass/partials/_custom.scss
@@ -1,7 +1,16 @@
 // Custom rules
 
 // Page header lang switcher spacing
-#menu a.hidden-sm  {
-  margin-top: 10px;
+#lang-links {
+  right: 0;
+  top: 10px;
+  position: absolute;
+}
+#menu a.hidden-xs  {
+  margin-top: 0;
   margin-right: 20px;
 }
+#menu a.hidden-sm  {
+  display: block !important;
+}
+////////////////////////////////////
